--- a/src/Components/Main/Question/QuestionTypes/GapTextDropdown/GapTextDropdown.css
+++ b/src/Components/Main/Question/QuestionTypes/GapTextDropdown/GapTextDropdown.css
@@ -4,7 +4,7 @@
 .correction-gap-text-with-dropdown span{
   font-size: 18px;
   display: inline;
-  line-height: 1.8rem;
+  line-height: 2.2rem;
 }
 
 .question-gap-text-with-dropdown .select-wrapper{
